--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#header" style="font-family: 'Oswald', sans-serif;">HOME</a></li>
-            <li><a href="#about" style="font-family: 'Oswald', sans-serif;">ABOUT</a></li>
-            <li><a href="#services" style="font-family: 'Oswald', sans-serif;">SERVICES</a></li>
+            <li><a href="#about" style="font-family: 'Oswald', sans-serif;">ABOUT US</a></li>
+            <li><a href="#collections" style="font-family: 'Oswald', sans-serif;">COLLECTIONS</a></li>
             <li><a href="#gallery" style="font-family: 'Oswald', sans-serif;">GALLERY</a></li>
             <li><a href="#testimonial" style="font-family: 'Oswald', sans-serif;">TESTIMONIAL</a></li>
-            <li><a href="#contact" style="font-family: 'Oswald', sans-serif;">CONTACT</a></li>
+            <li><a href="#contact" style="font-family: 'Oswald', sans-serif;">CONTACT US</a></li>
           </ul>
         </div>
       </div>
@@ -74,7 +74,7 @@
         <div class="row">   
           <div class="col-lg-7 col-md-7">
             <div class="aboutme">  
-              <h1 style="font-family: 'Oswald', sans-serif;">About</h1>
+              <h1 class="text-center" style="font-family: 'Oswald', sans-serif;">About Us</h1>
               <p style="font-family: 'Oswald', sans-serif;">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
               </p>
@@ -89,6 +89,57 @@
         </div>
       </div>
     </section>
+
+
+
+<!-- Collections -->
+
+
+    <section id="collections" class="collections">
+      <div class="container">
+        <div class="row">
+          <h1 style="font-family: 'Oswald', sans-serif;">Collections</h1>
+          <p style="font-family: 'Oswald', sans-serif;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+          <div class="col-lg-4 col-md-4">
+            <div class="packages">
+              <h4 style="font-family: 'Oswald', sans-serif;">Casual</h4>
+              <img src="img/8.jpg">
+              <button class="btn btn-full" style="font-family: 'Oswald', sans-serif;">See More</button>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="packages">
+              <h4 style="font-family: 'Oswald', sans-serif;">Summer</h4>
+              <img src="img/12.jpeg">
+              <button class="btn btn-full" style="font-family: 'Oswald', sans-serif;">See More</button>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-4">
+            <div class="packages">
+              <h4 style="font-family: 'Oswald', sans-serif;">Party</h4>
+              <img src="img/14.jpg">
+              <button class="btn btn-full" style="font-family: 'Oswald', sans-serif;">See More</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+
+
+<!-- Gallerry -->
+
+    <section id="gallery" class="gallery">
+      <div class="container">
+        <div class="row">
+          
+        </div>
+      </div>
+    </section>
+
 
 
 
